--- a/about/index.html
+++ b/about/index.html
@@ -155,7 +155,7 @@
                 <div class="site-heading">
                     <h1>About</h1>
                     <!--<hr class="small">-->
-                    <span class="subheading">Hey, this is Kaijun.</span>
+                    <span class="subheading">Make a better life！</span>
                 </div>
             </div>
         </div>
