--- a/about/index.html
+++ b/about/index.html
@@ -240,7 +240,7 @@
 
                             
                                 <li>
-                                    <a target="_blank" href="http://weibo.com/coderminer">
+                                    <a target="_blank" href="http://weibo.com/gbaidu">
                                         <span class="fa-stack fa-lg">
                                             <i class="fa fa-circle fa-stack-2x"></i>
                                             <i class="fa fa-weibo fa-stack-1x fa-inverse"></i>
@@ -298,7 +298,7 @@
 
                 
                     <li>
-                        <a target="_blank" href="http://weibo.com/coderminer">
+                        <a target="_blank" href="http://weibo.com/gbaidu">
                             <span class="fa-stack fa-lg">
                                 <i class="fa fa-circle fa-stack-2x"></i>
                                 <i class="fa fa-weibo fa-stack-1x fa-inverse"></i>
@@ -399,7 +399,7 @@
 
 <!--fastClick.js -->
 <script>
-    async("http://cdn.bootcss.com/fastclick/1.0.6/fastclick.min.js", function(){
+    async("https://cdn.staticfile.org/fastclick/1.0.6/fastclick.min.js", function(){
         var $nav = document.querySelector("nav");
         if($nav) FastClick.attach($nav);
     })
