--- a/404.html
+++ b/404.html
@@ -17,7 +17,7 @@
         
     </title>
 
-    <link rel="canonical" href="http://coderminer.github.io/404.html">
+    <link rel="canonical" href="https://coderminer.github.io/404.html">
 
     <!-- Bootstrap Core CSS -->
     <link rel="stylesheet" href="/css/bootstrap.min.css">
@@ -279,7 +279,7 @@
 <script>
     // only load tagcloud.js in tag.html
     if($('#tag_cloud').length !== 0){
-        async("http://coderminer.github.io/js/jquery.tagcloud.js",function(){
+        async("https://coderminer.github.io/js/jquery.tagcloud.js",function(){
             $.fn.tagcloud.defaults = {
                 //size: {start: 1, end: 1, unit: 'em'},
                 color: {start: '#bbbbee', end: '#0085a1'},
@@ -313,7 +313,7 @@
 
 
 <!-- Image to hack wechat -->
-<img src="http://coderminer.github.io/img/icon_wechat.png" width="0" height="0" />
+<img src="https://coderminer.github.io/img/icon_wechat.png" width="0" height="0" />
 <!-- Migrate from head to bottom, no longer block render and still work -->
 
 </body>
