--- a/about/index.html
+++ b/about/index.html
@@ -17,7 +17,7 @@
         
     </title>
 
-    <link rel="canonical" href="http://coderminer.github.io/about/">
+    <link rel="canonical" href="https://coderminer.github.io/about/">
 
     <!-- Bootstrap Core CSS -->
     <link rel="stylesheet" href="/css/bootstrap.min.css">
@@ -155,7 +155,7 @@
                 <div class="site-heading">
                     <h1>About</h1>
                     <!--<hr class="small">-->
-                    <span class="subheading">Make a better life！</span>
+                    <span class="subheading">Make a better life!</span>
                 </div>
             </div>
         </div>
@@ -387,7 +387,7 @@
 <script>
     // only load tagcloud.js in tag.html
     if($('#tag_cloud').length !== 0){
-        async("http://coderminer.github.io/js/jquery.tagcloud.js",function(){
+        async("https://coderminer.github.io/js/jquery.tagcloud.js",function(){
             $.fn.tagcloud.defaults = {
                 //size: {start: 1, end: 1, unit: 'em'},
                 color: {start: '#bbbbee', end: '#0085a1'},
@@ -421,7 +421,7 @@
 
 
 <!-- Image to hack wechat -->
-<img src="http://coderminer.github.io/img/icon_wechat.png" width="0" height="0" />
+<img src="https://coderminer.github.io/img/icon_wechat.png" width="0" height="0" />
 <!-- Migrate from head to bottom, no longer block render and still work -->
 
 </body>
